--- a/report/report.bib
+++ b/report/report.bib
@@ -208,3 +208,72 @@ author = "Peter Breitenlohner and Daniel Z. Freedman"
       primaryClass   = "hep-th",
       SLACcitation   = "%%CITATION = ARXIV:0903.3246;%%",
 }
+@article{ dome,
+Author = {Broun, D. M.},
+Title = {{What lies beneath the dome?}},
+Journal = {{NATURE PHYSICS}},
+Year = {{2008}},
+Volume = {{4}},
+Number = {{3}},
+Pages = {{170-172}},
+Month = {{MAR}},
+Abstract = {{Numerous experiments on cuprate materials suggest that a
+   zero-temperature phase transition is hidden beneath the superconducting
+   dome. Is it the key to understanding high-temperature superconductivity,
+   and can it explain the anomalous normal state properties?}},
+Publisher = {{NATURE PUBLISHING GROUP}},
+Address = {{MACMILLAN BUILDING, 4 CRINAN ST, LONDON N1 9XW, ENGLAND}},
+Type = {{Article}},
+Language = {{English}},
+Affiliation = {{Broun, DM (Reprint Author), Simon Fraser Univ, Dept Phys, Burnaby, BC V5A 1S6, Canada.
+   Simon Fraser Univ, Dept Phys, Burnaby, BC V5A 1S6, Canada.}},
+DOI = {{10.1038/nphys909}},
+ISSN = {{1745-2473}},
+Keywords-Plus = {{HIGH-TEMPERATURE SUPERCONDUCTORS; FERMI-SURFACE; CRITICALITY;
+   TRANSITION; MAGNETISM}},
+Research-Areas = {{Physics}},
+Web-of-Science-Categories  = {{Physics, Multidisciplinary}},
+Author-Email = {{dbroun@sfu.ca}},
+ResearcherID-Numbers = {{Broun, David/C-2077-2008}},
+Number-of-Cited-References = {{17}},
+Times-Cited = {{37}},
+Journal-ISO = {{Nat. Phys.}},
+Doc-Delivery-Number = {{282IA}},
+Unique-ID = {{ISI:000254559900008}},
+}
+@article{leggett2006we,
+  title={What do we know about high Tc?},
+  author={Leggett, Anthony J},
+  journal={Nature Physics},
+  volume={2},
+  number={3},
+  pages={134--136},
+  year={2006},
+  publisher={Nature Publishing Group}
+}
+@book{gsl,
+    abstract = {The {GNU} Scientific Library ({GSL}) is a numerical library for C and C++ programmers. It provides over 1,000 routines for solving mathematical problems in science and engineering. Written by the developers of {GSL} this reference manual is the definitive guide to the library. <{P>The} {GNU} Scientific Library is free software, distributed under the {GNU} General Public License ({GPL}). It is available for {GNU} ({GNU}/Linux), Unix and Microsoft Windows systems. <{P>This} is the revised and updated second edition of the manual, and corresponds to version 1.6 of the library.},
+    author = {Galassi, Mark and Davies, Jim and Theiler, James and Gough, Brian and Jungman, Gerard and Booth, Michael and Rossi, Fabrice},
+    citeulike-article-id = {672166},
+    citeulike-linkout-0 = {http://www.amazon.ca/exec/obidos/redirect?tag=citeulike09-20\&amp;path=ASIN/0954161734},
+    citeulike-linkout-1 = {http://www.amazon.de/exec/obidos/redirect?tag=citeulike01-21\&amp;path=ASIN/0954161734},
+    citeulike-linkout-2 = {http://www.amazon.fr/exec/obidos/redirect?tag=citeulike06-21\&amp;path=ASIN/0954161734},
+    citeulike-linkout-3 = {http://www.amazon.jp/exec/obidos/ASIN/0954161734},
+    citeulike-linkout-4 = {http://www.amazon.co.uk/exec/obidos/ASIN/0954161734/citeulike00-21},
+    citeulike-linkout-5 = {http://www.amazon.com/exec/obidos/redirect?tag=citeulike07-20\&path=ASIN/0954161734},
+    citeulike-linkout-6 = {http://www.worldcat.org/isbn/0954161734},
+    citeulike-linkout-7 = {http://books.google.com/books?vid=ISBN0954161734},
+    citeulike-linkout-8 = {http://www.amazon.com/gp/search?keywords=0954161734\&index=books\&linkCode=qs},
+    citeulike-linkout-9 = {http://www.librarything.com/isbn/0954161734},
+    day = {01},
+    howpublished = {Paperback},
+    isbn = {0954161734},
+    keywords = {numerical\_recipes},
+    month = feb,
+    posted-at = {2008-04-04 09:38:42},
+    priority = {2},
+    publisher = {Network Theory Ltd.},
+    title = {Gnu Scientific Library: Reference Manual},
+    url = {http://www.amazon.com/exec/obidos/redirect?tag=citeulike07-20\&path=ASIN/0954161734},
+    year = {2003}
+}
